# case-ta6-experimental-platform-OpenUxAS

./: .gitignore  arm-linux-gnueabihf-cross-file.txt  build.xml  camkes-vm-arm-linux-gnueabi-cross-file.txt  meson.build
src/Communications/: LmcpObjectNetworkBridgeManager.cpp  LmcpObjectNetworkCamkesMultiReceiverBridge.cpp  LmcpObjectNetworkCamkesMultiReceiverBridge.h  LmcpObjectNetworkCamkesReceiverBridge.cpp  LmcpObjectNetworkCamkesReceiverBridge.h  LmcpObjectNetworkCamkesTransmitterBridge.cpp  LmcpObjectNetworkCamkesTransmitterBridge.h  LmcpObjectNetworkSerialBridge.cpp  LmcpObjectNetworkSerialBridge.h  LmcpObjectNetworkTcpToCamkesBridge.cpp  LmcpObjectNetworkTcpToCamkesBridge.h  meson.build
src/Communications/camkes_queue/include/: counter.h  data.h  queue.h
src/Communications/camkes_queue/src/: queue.c
src/Communications/queue/include/: queue.h
src/LMCP/: CMakeLists.txt  LMCP.vcproj  LMCP.vcxproj  LMCP.vcxproj.filters  Makefile  UXNATIVE.xml  meson.build
src/LMCP/afrl/cmasi/: AbstractGeometry.h  AbstractGeometryDescendants.h  AbstractZone.h  AbstractZoneDescendants.h  AirVehicleConfiguration.h  AirVehicleState.h  AltitudeType.h  AreaSearchTask.h  AutomationRequest.h  AutomationResponse.h  CMASI.h  CMASIEnum.h  CMASIFactory.cpp  CMASIFactory.h  CMASIXMLReader.cpp  CMASIXMLReader.h  CameraAction.h  CameraConfiguration.h  CameraState.h  Circle.h  CommandStatusType.h  EntityConfiguration.h  EntityConfigurationDescendants.h  EntityState.h  EntityStateDescendants.h  FOVOperationMode.h  FlightDirectorAction.h  FlightProfile.h  FollowPathCommand.h  GimbalAngleAction.h  GimbalConfiguration.h  GimbalPointingMode.h  GimbalScanAction.h  GimbalStareAction.h  GimbalState.h  GimbalStateDescendants.h  GimballedPayloadState.h  GimballedPayloadStateDescendants.h  GoToWaypointAction.h  KeepInZone.h  (+117 more)
src/LMCP/afrl/cmasi/perceive/: EntityPerception.h  PERCEIVE.h  PERCEIVEEnum.h  PERCEIVEFactory.cpp  PERCEIVEFactory.h  PERCEIVEXMLReader.cpp  PERCEIVEXMLReader.h  TrackEntityAction.h  TrackEntityTask.h  afrlcmasiperceiveEntityPerception.cpp  afrlcmasiperceiveTrackEntityAction.cpp  afrlcmasiperceiveTrackEntityTask.cpp
src/LMCP/afrl/impact/: AngledAreaSearchTask.h  AreaActionOptions.h  AreaOfInterest.h  AreaSearchPattern.h  BatchRoutePlanRequest.h  BatchRoutePlanResponse.h  BatchSummaryRequest.h  BatchSummaryResponse.h  BlockadeTask.h  CommRelayTask.h  ConfigurationRequest.h  CordonTask.h  DeployImpactPayload.h  EscortTask.h  IMPACT.h  IMPACTEnum.h  IMPACTFactory.cpp  IMPACTFactory.h  IMPACTXMLReader.cpp  IMPACTXMLReader.h  ImpactAutomationRequest.h  ImpactAutomationResponse.h  ImpactLineSearchTask.h  ImpactPayloadConfiguration.h  ImpactPayloadType.h  ImpactPointSearchTask.h  LineOfInterest.h  MultiVehicleWatchTask.h  PatternSearchTask.h  PayloadDropTask.h  PointOfInterest.h  PowerConfiguration.h  PowerPlant.h  PowerPlantState.h  RadioConfiguration.h  RadioState.h  RadioTowerConfiguration.h  RadioTowerState.h  SpeedAltPair.h  TaskSummary.h  (+40 more)
src/LMCP/afrl/vehicles/: GroundVehicleConfiguration.h  GroundVehicleState.h  StationarySensorConfiguration.h  StationarySensorState.h  SurfaceVehicleConfiguration.h  SurfaceVehicleState.h  VEHICLES.h  VEHICLESEnum.h  VEHICLESFactory.cpp  VEHICLESFactory.h  VEHICLESXMLReader.cpp  VEHICLESXMLReader.h  afrlvehiclesGroundVehicleConfiguration.cpp  afrlvehiclesGroundVehicleState.cpp  afrlvehiclesStationarySensorConfiguration.cpp  afrlvehiclesStationarySensorState.cpp  afrlvehiclesSurfaceVehicleConfiguration.cpp  afrlvehiclesSurfaceVehicleState.cpp
src/LMCP/avtas/lmcp/: Factory.cpp  LmcpXMLReader.h
src/LMCP/py/: LMCPClient.py  Readme.html
src/LMCP/py/afrl/impact/: AngledAreaSearchTask.py  AreaOfInterest.py  BatchRoutePlanRequest.py  BatchRoutePlanResponse.py  BatchSummaryRequest.py  BatchSummaryResponse.py  BlockadeTask.py  CommRelayTask.py  ConfigurationRequest.py  CordonTask.py  DeployImpactPayload.py  EscortTask.py  ImpactAutomationRequest.py  ImpactAutomationResponse.py  ImpactLineSearchTask.py  ImpactPayloadConfiguration.py  ImpactPointSearchTask.py  LineOfInterest.py  MultiVehicleWatchTask.py  PatternSearchTask.py  PayloadDropTask.py  PointOfInterest.py  PowerConfiguration.py  PowerPlantState.py  RadioConfiguration.py  RadioState.py  RadioTowerConfiguration.py  RadioTowerState.py  SeriesEnum.py  SpeedAltPair.py  TaskSummary.py  TaskTimingPair.py  VehicleSummary.py  WatchTask.py  WaterReport.py  WaterZone.py
src/LMCP/py/lmcp/: LMCPFactory.py
src/LMCP/test/client/: TestClient.vcproj  TestClient.vcxproj  main.cpp
src/LMCP/test/server/: TestServer.vcproj  TestServer.vcxproj  main.cpp
src/LMCP/test/verify/: Makefile  main.cpp
src/LMCP/uxas/messages/route/: EgressRouteRequest.h  EgressRouteResponse.h  GraphEdge.h  GraphNode.h  GraphRegion.h  ROUTE.h  ROUTEEnum.h  ROUTEFactory.cpp  ROUTEFactory.h  ROUTEXMLReader.cpp  ROUTEXMLReader.h  RoadPointsConstraints.h  RoadPointsRequest.h  RoadPointsResponse.h  RouteConstraints.h  RoutePlan.h  RoutePlanRequest.h  RoutePlanResponse.h  RouteRequest.h  RouteResponse.h  uxasmessagesrouteEgressRouteRequest.cpp  uxasmessagesrouteEgressRouteResponse.cpp  uxasmessagesrouteGraphEdge.cpp  uxasmessagesrouteGraphNode.cpp  uxasmessagesrouteGraphRegion.cpp  uxasmessagesrouteRoadPointsConstraints.cpp  uxasmessagesrouteRoadPointsRequest.cpp  uxasmessagesrouteRoadPointsResponse.cpp  uxasmessagesrouteRouteConstraints.cpp  uxasmessagesrouteRoutePlan.cpp  uxasmessagesrouteRoutePlanRequest.cpp  uxasmessagesrouteRoutePlanResponse.cpp  uxasmessagesrouteRouteRequest.cpp  uxasmessagesrouteRouteResponse.cpp
src/LMCP/uxas/messages/task/: AssignmentCoordination.h  AssignmentCoordinatorTask.h  AssignmentCostMatrix.h  CancelTask.h  CoordinatedAutomationRequest.h  FootprintRequest.h  PlanningState.h  RendezvousTask.h  SensorFootprint.h  SensorFootprintRequests.h  SensorFootprintResponse.h  TaskActive.h  TaskAssignment.h  TaskAssignmentSummary.h  TaskAutomationRequest.h  TaskAutomationResponse.h  TaskComplete.h  TaskImplementationRequest.h  TaskImplementationResponse.h  TaskInitialized.h  TaskOption.h  TaskOptionCost.h  TaskPause.h  (+41 more)
(+211 files in other folders)
