cmake_minimum_required(VERSION 3.0)
project(LMCP)

set(LIB lmcp)
add_library( ${LIB} STATIC
    avtas/lmcp/ByteBuffer.cpp
    avtas/lmcp/Factory.cpp
    avtas/lmcp/NodeUtil.cpp
    avtas/lmcp/Node.cpp
    avtas/lmcp/XMLParser.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeVideoRecord.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeStartupComplete.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeCreateNewService.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeKillService.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeIncrementWaypoint.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeSafeHeadingAction.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeEntityLocation.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeBandwidthTest.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeBandwidthReceiveReport.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeSubTaskExecution.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeSubTaskAssignment.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeAutopilotKeepAlive.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeOnboardStatusReport.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeEntityJoin.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeEntityExit.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeSimulationTimeStepAcknowledgement.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeSpeedOverrideAction.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeZeroizeCommand.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeZeroizeCondition.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeDownloadRequest.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeDownloadReply.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeFileTransferRequest.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeFile.cpp
    uxas/messages/uxnative/uxasmessagesuxnativeFileTransfer.cpp
    uxas/messages/uxnative/UXNATIVEXMLReader.cpp
    uxas/messages/uxnative/UXNATIVEFactory.cpp
    uxas/messages/task/uxasmessagestaskAssignmentCoordinatorTask.cpp
    uxas/messages/task/uxasmessagestaskRendezvousTask.cpp
    uxas/messages/task/uxasmessagestaskPlanningState.cpp
    uxas/messages/task/uxasmessagestaskAssignmentCoordination.cpp
    uxas/messages/task/uxasmessagestaskCoordinatedAutomationRequest.cpp
    uxas/messages/task/uxasmessagestaskTaskAutomationRequest.cpp
    uxas/messages/task/uxasmessagestaskTaskAutomationResponse.cpp
    uxas/messages/task/uxasmessagestaskUniqueAutomationRequest.cpp
    uxas/messages/task/uxasmessagestaskUniqueAutomationResponse.cpp
    uxas/messages/task/uxasmessagestaskSensorFootprintRequests.cpp
    uxas/messages/task/uxasmessagestaskFootprintRequest.cpp
    uxas/messages/task/uxasmessagestaskSensorFootprint.cpp
    uxas/messages/task/uxasmessagestaskSensorFootprintResponse.cpp
    uxas/messages/task/uxasmessagestaskTaskImplementationRequest.cpp
    uxas/messages/task/uxasmessagestaskTaskImplementationResponse.cpp
    uxas/messages/task/uxasmessagestaskAssignmentCostMatrix.cpp
    uxas/messages/task/uxasmessagestaskTaskOptionCost.cpp
    uxas/messages/task/uxasmessagestaskTaskAssignment.cpp
    uxas/messages/task/uxasmessagestaskTaskAssignmentSummary.cpp
    uxas/messages/task/uxasmessagestaskTaskOption.cpp
    uxas/messages/task/uxasmessagestaskTaskPlanOptions.cpp
    uxas/messages/task/uxasmessagestaskTaskPause.cpp
    uxas/messages/task/uxasmessagestaskTaskResume.cpp
    uxas/messages/task/uxasmessagestaskTaskProgress.cpp
    uxas/messages/task/uxasmessagestaskTaskProgressRequest.cpp
    uxas/messages/task/uxasmessagestaskTaskInitialized.cpp
    uxas/messages/task/uxasmessagestaskTaskActive.cpp
    uxas/messages/task/uxasmessagestaskTaskComplete.cpp
    uxas/messages/task/uxasmessagestaskCancelTask.cpp
    uxas/messages/task/UXTASKXMLReader.cpp
    uxas/messages/task/UXTASKFactory.cpp
    uxas/messages/route/uxasmessagesrouteGraphNode.cpp
    uxas/messages/route/uxasmessagesrouteGraphEdge.cpp
    uxas/messages/route/uxasmessagesrouteGraphRegion.cpp
    uxas/messages/route/uxasmessagesrouteRouteConstraints.cpp
    uxas/messages/route/uxasmessagesrouteRouteRequest.cpp
    uxas/messages/route/uxasmessagesrouteRoutePlanRequest.cpp
    uxas/messages/route/uxasmessagesrouteRoutePlan.cpp
    uxas/messages/route/uxasmessagesrouteRoutePlanResponse.cpp
    uxas/messages/route/uxasmessagesrouteRouteResponse.cpp
    uxas/messages/route/uxasmessagesrouteEgressRouteRequest.cpp
    uxas/messages/route/uxasmessagesrouteEgressRouteResponse.cpp
    uxas/messages/route/uxasmessagesrouteRoadPointsConstraints.cpp
    uxas/messages/route/uxasmessagesrouteRoadPointsRequest.cpp
    uxas/messages/route/uxasmessagesrouteRoadPointsResponse.cpp
    uxas/messages/route/ROUTEXMLReader.cpp
    uxas/messages/route/ROUTEFactory.cpp
    afrl/cmasi/perceive/afrlcmasiperceiveEntityPerception.cpp
    afrl/cmasi/perceive/afrlcmasiperceiveTrackEntityAction.cpp
    afrl/cmasi/perceive/afrlcmasiperceiveTrackEntityTask.cpp
    afrl/cmasi/perceive/PERCEIVEXMLReader.cpp
    afrl/cmasi/perceive/PERCEIVEFactory.cpp
    afrl/vehicles/afrlvehiclesGroundVehicleConfiguration.cpp
    afrl/vehicles/afrlvehiclesGroundVehicleState.cpp
    afrl/vehicles/afrlvehiclesSurfaceVehicleConfiguration.cpp
    afrl/vehicles/afrlvehiclesSurfaceVehicleState.cpp
    afrl/vehicles/afrlvehiclesStationarySensorConfiguration.cpp
    afrl/vehicles/afrlvehiclesStationarySensorState.cpp
    afrl/vehicles/VEHICLESXMLReader.cpp
    afrl/vehicles/VEHICLESFactory.cpp
    afrl/impact/afrlimpactPowerConfiguration.cpp
    afrl/impact/afrlimpactRadioConfiguration.cpp
    afrl/impact/afrlimpactRadioTowerConfiguration.cpp
    afrl/impact/afrlimpactRadioState.cpp
    afrl/impact/afrlimpactRadioTowerState.cpp
    afrl/impact/afrlimpactImpactPayloadConfiguration.cpp
    afrl/impact/afrlimpactDeployImpactPayload.cpp
    afrl/impact/afrlimpactPowerPlantState.cpp
    afrl/impact/afrlimpactBatchRoutePlanRequest.cpp
    afrl/impact/afrlimpactBatchRoutePlanResponse.cpp
    afrl/impact/afrlimpactTaskTimingPair.cpp
    afrl/impact/afrlimpactBatchSummaryRequest.cpp
    afrl/impact/afrlimpactBatchSummaryResponse.cpp
    afrl/impact/afrlimpactTaskSummary.cpp
    afrl/impact/afrlimpactVehicleSummary.cpp
    afrl/impact/afrlimpactSpeedAltPair.cpp
    afrl/impact/afrlimpactImpactAutomationRequest.cpp
    afrl/impact/afrlimpactImpactAutomationResponse.cpp
    afrl/impact/afrlimpactPointOfInterest.cpp
    afrl/impact/afrlimpactLineOfInterest.cpp
    afrl/impact/afrlimpactAreaOfInterest.cpp
    afrl/impact/afrlimpactImpactPointSearchTask.cpp
    afrl/impact/afrlimpactPatternSearchTask.cpp
    afrl/impact/afrlimpactAngledAreaSearchTask.cpp
    afrl/impact/afrlimpactImpactLineSearchTask.cpp
    afrl/impact/afrlimpactWatchTask.cpp
    afrl/impact/afrlimpactMultiVehicleWatchTask.cpp
    afrl/impact/afrlimpactCommRelayTask.cpp
    afrl/impact/afrlimpactCordonTask.cpp
    afrl/impact/afrlimpactBlockadeTask.cpp
    afrl/impact/afrlimpactEscortTask.cpp
    afrl/impact/afrlimpactConfigurationRequest.cpp
    afrl/impact/afrlimpactWaterReport.cpp
    afrl/impact/afrlimpactWaterZone.cpp
    afrl/impact/afrlimpactPayloadDropTask.cpp
    afrl/impact/IMPACTXMLReader.cpp
    afrl/impact/IMPACTFactory.cpp
    afrl/cmasi/afrlcmasiAbstractGeometry.cpp
    afrl/cmasi/afrlcmasiKeyValuePair.cpp
    afrl/cmasi/afrlcmasiLocation3D.cpp
    afrl/cmasi/afrlcmasiPayloadAction.cpp
    afrl/cmasi/afrlcmasiPayloadConfiguration.cpp
    afrl/cmasi/afrlcmasiPayloadState.cpp
    afrl/cmasi/afrlcmasiVehicleAction.cpp
    afrl/cmasi/afrlcmasiTask.cpp
    afrl/cmasi/afrlcmasiSearchTask.cpp
    afrl/cmasi/afrlcmasiAbstractZone.cpp
    afrl/cmasi/afrlcmasiEntityConfiguration.cpp
    afrl/cmasi/afrlcmasiFlightProfile.cpp
    afrl/cmasi/afrlcmasiAirVehicleConfiguration.cpp
    afrl/cmasi/afrlcmasiEntityState.cpp
    afrl/cmasi/afrlcmasiAirVehicleState.cpp
    afrl/cmasi/afrlcmasiWedge.cpp
    afrl/cmasi/afrlcmasiAreaSearchTask.cpp
    afrl/cmasi/afrlcmasiCameraAction.cpp
    afrl/cmasi/afrlcmasiCameraConfiguration.cpp
    afrl/cmasi/afrlcmasiGimballedPayloadState.cpp
    afrl/cmasi/afrlcmasiCameraState.cpp
    afrl/cmasi/afrlcmasiCircle.cpp
    afrl/cmasi/afrlcmasiGimbalAngleAction.cpp
    afrl/cmasi/afrlcmasiGimbalConfiguration.cpp
    afrl/cmasi/afrlcmasiGimbalScanAction.cpp
    afrl/cmasi/afrlcmasiGimbalStareAction.cpp
    afrl/cmasi/afrlcmasiGimbalState.cpp
    afrl/cmasi/afrlcmasiGoToWaypointAction.cpp
    afrl/cmasi/afrlcmasiKeepInZone.cpp
    afrl/cmasi/afrlcmasiKeepOutZone.cpp
    afrl/cmasi/afrlcmasiLineSearchTask.cpp
    afrl/cmasi/afrlcmasiNavigationAction.cpp
    afrl/cmasi/afrlcmasiLoiterAction.cpp
    afrl/cmasi/afrlcmasiLoiterTask.cpp
    afrl/cmasi/afrlcmasiWaypoint.cpp
    afrl/cmasi/afrlcmasiMissionCommand.cpp
    afrl/cmasi/afrlcmasiMustFlyTask.cpp
    afrl/cmasi/afrlcmasiOperatorSignal.cpp
    afrl/cmasi/afrlcmasiOperatingRegion.cpp
    afrl/cmasi/afrlcmasiAutomationRequest.cpp
    afrl/cmasi/afrlcmasiPointSearchTask.cpp
    afrl/cmasi/afrlcmasiPolygon.cpp
    afrl/cmasi/afrlcmasiRectangle.cpp
    afrl/cmasi/afrlcmasiRemoveTasks.cpp
    afrl/cmasi/afrlcmasiServiceStatus.cpp
    afrl/cmasi/afrlcmasiSessionStatus.cpp
    afrl/cmasi/afrlcmasiVehicleActionCommand.cpp
    afrl/cmasi/afrlcmasiVideoStreamAction.cpp
    afrl/cmasi/afrlcmasiVideoStreamConfiguration.cpp
    afrl/cmasi/afrlcmasiVideoStreamState.cpp
    afrl/cmasi/afrlcmasiAutomationResponse.cpp
    afrl/cmasi/afrlcmasiRemoveZones.cpp
    afrl/cmasi/afrlcmasiRemoveEntities.cpp
    afrl/cmasi/afrlcmasiFlightDirectorAction.cpp
    afrl/cmasi/afrlcmasiWeatherReport.cpp
    afrl/cmasi/afrlcmasiFollowPathCommand.cpp
    afrl/cmasi/afrlcmasiPathWaypoint.cpp
    afrl/cmasi/afrlcmasiStopMovementAction.cpp
    afrl/cmasi/afrlcmasiWaypointTransfer.cpp
    afrl/cmasi/afrlcmasiPayloadStowAction.cpp
    afrl/cmasi/CMASIXMLReader.cpp
    afrl/cmasi/CMASIFactory.cpp
)

if (WIN32)
    target_compile_definitions( ${LIB}
        PUBLIC  "WIN32"
    )
else()
    target_compile_definitions( ${LIB}
        PUBLIC  "LINUX"
    )
    target_compile_options( ${LIB}
        PUBLIC  "-std=c++11"
    )
endif()

target_include_directories( ${LIB}
    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
)

install(TARGETS ${LIB} DESTINATION lib)
